Added relevant flexbox properties

--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -19,7 +15,6 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
@@ -65,45 +60,49 @@
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
         <div class="features-items">
-        <article>
-            <p class="fontawesome-icon"></p>
-            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-        </article>
-        <article>
-          <p class="fontawesome-icon">
-          </p>
-          <p class="features-item-description">
-            12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
-          </p>
-        </article>
-        <article>
-          <p class="fontawesome-icon">
-          </p>
-          <p class="features-item-description">
-            Private chef team providing on demand meals - just like your team kitchen.
-          </p>
-        </article>
-        <article>
-          <p class="fontawesome-icon">
-          </p>
-          <p class="features-item-description">
-            5 outdoor obstacle courses, including private beach ½ mile from bungalow.
-          </p>
-        </article>
-        <article>
-          <p class="fontawesome-icon">
-          </p>
-          <p class="features-item-description">
-            Retreat facilitator to manage your day to day activities so you all get a chance to reset.
-          </p>
-        </article>
-        <article>
-          <p class="fontawesome-icon">
-          </p>
-          <p class="features-item-description">
-            Dedicated computer room for times that you must wifi.
-          </p>
-        </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Private chef team providing on demand meals - just like your team kitchen.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
+            </p>
+          </article>
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Dedicated computer room for times that you must wifi.
+            </p>
+          </article>
+        </div>
       </div>
     </section>
 
@@ -122,9 +121,9 @@
           </div>
         </article>
       </div>
-    </section
+    </section>
 
-  </main>
+  </main> <!-- main wrapper -->
 
   <footer>
     <div class="content-wrapper">
@@ -160,6 +159,12 @@
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script>
+  window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+
+</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
