--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Unplugged Retreat | ABOUT</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +14,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+
 </head>
 
 <body>
@@ -26,8 +28,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
+          <li><a href="index.html">About</a></li>
+          <li><a href="../faq/index.html" target="_blank">Faq</a></li>
         </ul>
       </nav>
     </div>
@@ -35,95 +37,50 @@
 
   <main>
 
-    <section class="hero-area">
+    <section class="mission">
       <div class="content-wrapper">
-        <h1>Retreat from the desk, return refreshed.</h1>
-      </div>
-    </section>
-
-    <aside>
-      <div class="content-wrapper">
-        <div class="form-description">
-          <h3>Want to join the next retreat?</h3>
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
           <p>
-            Find out when we are holding our next retreat and how your company or team can sign up!
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
           </p>
         </div>
-        <div class="form">
-          <h3>Find out more</h3>
-          <input type="text" name="name" value="name@email.com">
-          <input type="button" value="Download Itinerary">
-        </div>
-      </div> <!-- aside content wrapper ends -->
-    </aside>
+      </div> <!-- mission content wrapper ends -->
+    </section> <!-- contact-info -->
 
-    <section class="features">
-      <div class="content-wrapper">
-        <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
-        <div class="features-items">
-          <article>
-            <p class="fontawesome-icon">
-            </p>
-            <p class="features-item-description">
-              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
-            </p>
-          </article>
-          <article>
-            <p class="fontawesome-icon">
-            </p>
-            <p class="features-item-description">
-              12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
-            </p>
-          </article>
-          <article>
-            <p class="fontawesome-icon">
-            </p>
-            <p class="features-item-description">
-              Private chef team providing on demand meals - just like your team kitchen.
-            </p>
-          </article>
-          <article>
-            <p class="fontawesome-icon">
-            </p>
-            <p class="features-item-description">
-              5 outdoor obstacle courses, including private beach ½ mile from bungalow.
-            </p>
-          </article>
-          <article>
-            <p class="fontawesome-icon">
-            </p>
-            <p class="features-item-description">
-              Retreat facilitator to manage your day to day activities so you all get a chance to reset.
-            </p>
-          </article>
-          <article>
-            <p class="fontawesome-icon">
-            </p>
-            <p class="features-item-description">
-              Dedicated computer room for times that you must wifi.
-            </p>
-          </article>
-        </div>
-      </div>
+    <section class="map">
+      <figure>
+      </figure>
     </section>
-
-    <section class="reviews">
+    <section class="contact-section">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like this one.</h2>
-        <article>
+        <h2>Contact us, because you all need this.</h2>
+        <address class="contact-content">
           <div>
-            <h3>LaCrue Bottling Co. October 2018</h3>
+            <h4>General Information</h4>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-              ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-              fugiat nulla pariatur.
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
             </p>
           </div>
-        </article>
-      </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <p>
+              555-555-5556<br>
+              facilitator@unplugged.com
+            </p>
+          </div>
+        </address> <!-- contact-content div ends -->
+      </div> <!-- contact content wrapper ends -->
     </section>
-
   </main> <!-- main wrapper -->
 
   <footer>
@@ -161,6 +118,12 @@
   </footer>
 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script>
+  window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
+
+</script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
