--- a/faq/index.html
+++ b/faq/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Unplugged Retreat | FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +15,6 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="index.html">FAQ</a></li>
-          <li><a href="../about/index.html" target="_blank">About</a></li>
+          <li><a href="index.html">About</a></li>
+          <li><a href="../faq/index.html" target="_blank">Faq</a></li>
         </ul>
       </nav>
     </div>
@@ -96,6 +96,12 @@
 
 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script>
+  window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
+
+</script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
