--- a/about/index.html
+++ b/about/index.html
@@ -60,6 +60,7 @@
 
     <section class="map">
       <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3214.8990586176983!2d-82.3555551846574!3d36.314754602573835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885a7cfb9bda85af%3A0x85ef42034708d642!2sWhite%20Duck%20Taco%20Shop!5e0!3m2!1sen!2sus!4v1612298196068!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </figure>
     </section>
     <section class="contact-section">
