--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-
+  <script src="https://kit.fontawesome.com/0dff87b405.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
