--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
+  <script src="https://kit.fontawesome.com/0dff87b405.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -67,6 +67,7 @@
         <div class="features-items">
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-campground"></i>
             </p>
             <p class="features-item-description">
               Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
@@ -74,6 +75,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-bed"></i>
             </p>
             <p class="features-item-description">
               12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
@@ -81,6 +83,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-utensils"></i>
             </p>
             <p class="features-item-description">
               Private chef team providing on demand meals - just like your team kitchen.
@@ -88,6 +91,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
             </p>
             <p class="features-item-description">
               5 outdoor obstacle courses, including private beach ½ mile from bungalow.
@@ -95,6 +99,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-smile"></i>
             </p>
             <p class="features-item-description">
               Retreat facilitator to manage your day to day activities so you all get a chance to reset.
@@ -102,6 +107,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-wifi"></i>
             </p>
             <p class="features-item-description">
               Dedicated computer room for times that you must wifi.
