Finished adding CSS

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Unplugged Retreat | ABOUT</title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,8 +31,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a href="../faq/index.html" target="_blank">Faq</a></li>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../faq/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
