--- a/faq/index.html
+++ b/faq/index.html
@@ -30,8 +30,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a href="../faq/index.html" target="_blank">Faq</a></li>
+          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../faq/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
     </div>
